RESOLVED FIXED 54013
Fix typo in the include guards name in ChunkedUpdateDrawingAreaProxy.h
https://bugs.webkit.org/show_bug.cgi?id=54013
Summary Fix typo in the include guards name in ChunkedUpdateDrawingAreaProxy.h
Alejandro G. Castro
Reported 2011-02-08 09:22:18 PST
The guards these in this moment: #ifndef DrawingAreaProxyUpdateChunk_h #define DrawingAreaProxyUpdateChunk_h
Attachments
Proposed patch (1.66 KB, patch)
2011-02-08 09:24 PST, Alejandro G. Castro
mrobinson: review+
Alejandro G. Castro
Comment 1 2011-02-08 09:24:36 PST
Created attachment 81650 [details] Proposed patch
Alejandro G. Castro
Comment 2 2011-02-08 23:44:40 PST
Note You need to log in before you can comment on or make changes to this bug.