2011-02-08  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Martin Robinson.

        Fix typo in the include guards name in ChunkedUpdateDrawingAreaProxy.h
        https://bugs.webkit.org/show_bug.cgi?id=54013

        * UIProcess/ChunkedUpdateDrawingAreaProxy.h:

Canonical link: https://commits.webkit.org/68082@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78025 268f45cc-cd09-0410-ab3c-d52691b4dbfc